# contego

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  cargo-checkmate.yaml  ci.yml  release.yml
src/: client.rs  common.rs  comms.rs  connector.rs  crypto.rs  lib.rs  listener.rs  main.rs  parser.rs  server.rs  sockets.rs  ui.rs  util.rs
tests/: integration_test.rs  sockets_integration.rs
