[package]
name = "contego"
description = "GUI tool for secure file transfer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.4", features = ["full"] }
local-ip-address = "0.4.4"
rand = "0.7.0"
eframe = "0.21.3"
egui = "0.21.0"
x25519-dalek = "1.2.0"
aes-gcm = "0.10.1"
base64 = "0.21.0"
sha256 = "1.1.2"

[dev-dependencies]
tokio-test = "0.4.2"
ntest = "0.8.1"
